@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Review notifications
class Notification <<planned>> {
  +Guid Id
  +Guid CongregationId
  +Guid RecipientId
  +NotificationKind Kind
  +Guid SubjectId
  +Guid? ActorId
  +DateTimeOffset CreatedAt
  +DateTimeOffset? ReadAt
  +MarkRead(asOf: DateTimeOffset): void
}
class NotificationPreference <<planned>> {
  +Guid MemberId
  +NotificationKind Kind
  +bool Enabled
}
class NotificationWriter <<planned>> {
  +AddIfEnabled(recipientId: Guid, kind: NotificationKind, subjectId: Guid): Task
}
NotificationWriter --> NotificationPreference : checks recipient choice
NotificationWriter ..> Notification : stages within source transaction
@enduml
